--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
     <div id="song1" class="my-4">
         <h2>Amor en Zamba</h2>
         <img src="img/AmorEnZamba.jpeg" alt="Amor en Zamba" class="song-image">
-        <p><a href="#top">Volver</a></p>
+        <p><a href="#top">Indice</a></p>
     </div>
 
     <!-- Canción 2 -->
     <div id="song2" class="my-4">
         <h2>Gustito a Mistol</h2>
         <img src="img/GustitoAMistol.jpeg" alt="Gustito a Mistol" class="song-image">
-        <p><a href="#top">Volver</a></p>
+        <p><a href="#top">Indice</a></p>
     </div>
 
     <!-- Canción 3 -->
     <div id="song3" class="my-4">
         <h2>Alfonsina y el Mar</h2>
         <img src="alfonsina-y-el-mar.jpg" alt="Alfonsina y el Mar" class="song-image">
-        <p><a href="#top">Volver al índice</a></p>
+        <p><a href="#top">Indice</a></p>
     </div>
 </div>
 
