--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <div class="container">
     <div class="header">
-        <h1>Cancionero</h1>
-        <p>Un recopilatorio de tus canciones favoritas</p>
+        <h1>Magdalena Saravia</h1>
+        <p>Letras de mis canciones favoritas</p>
     </div>
 
     <!-- Índice -->
