--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="card-body">
                     <ul>
-                        <li><a href="#zamba1">Zamba 1</a></li>
-                        <li><a href="#zamba2">Zamba 2</a></li>
+                        <li><a href="#tamaracastro">Tamara Castro - Zamba de amor en vuelo</a></li>
+                        <li><a href="#gustitoamistol">C. Centuri&oacute;n - Gustito a Mistol</a></li>
+                        <li><a href="#amorenzamba">C. Centuri&oacute;n - Amor en Zamba</a></li>
+                        <li><a href="#balderrama">Balderrama</a></li>
+                        <li><a href="#talenita">Tale&nacute;ita</a></li>
+                        <li><a href="#pielchaquenia">Piel Chaque&nacute;a</a></li>
                     </ul>
                 </div>
             </div>
@@ -109,6 +113,42 @@
         <img src="img/03_jardindelarepublica.jpg" alt="Jardín de la república" class="song-image">
         <p><a href="#top">Inicio</a></p>
     </div>
+    <!-- Canción 4 -->
+    <div id="tamaracastro" class="my-4">
+        <h2>Zamba de amor en vuelo</h2>
+        <img src="img/04_tamaracastro.jpg" alt="Tamar Castro" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>
+    <!-- Canción 5 -->
+    <div id="gustitoamistol" class="my-4">
+        <h2>Gustito a Mistol</h2>
+        <img src="img/05_gustitoamistol.jpg" alt="Gustito a Mistol" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>
+    <!-- Canción 6 -->
+    <div id="amorenzamba" class="my-4">
+        <h2>Amor en Zamba</h2>
+        <img src="img/06_amorenzamba.jpg" alt="Amor en Zamba" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>
+    <!-- Canción 7 -->
+    <div id="balderrama" class="my-4">
+        <h2>Balderrama</h2>
+        <img src="img/07_balderrama.jpg" alt="Balderrama" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>
+    <!-- Canción 8 -->
+    <div id="talenita" class="my-4">
+        <h2>La Tale&nacute;ita</h2>
+        <img src="img/08_taleñita.jpg" alt="Tleñita" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>
+    <!-- Canción 9 -->
+    <div id="pielchaquenia" class="my-4">
+        <h2>Piel Chaque&nacute;a</h2>
+        <img src="img/09_pielchaqueña.jpg" alt="Piel chaqueña" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>    
 </div>
 
 <!-- Bootstrap JS, Popper.js, and jQuery -->
