--- a/index.html
+++ b/index.html
@@ -81,14 +81,39 @@
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-body">
                     <ul>
-                        <li><a href="#soledad1">Soledad 1</a></li>
-                        <li><a href="#soledad2">Soledad 2</a></li>
+                        <li><a href="#laoma">La oma</a></li>
+                        <li><a href="#dejamequemevaya">Dejame que me vaya</a></li>
+                        <li><a href="#lapaloma">La paloma</a></li>
+                        <li><a href="#almacorazonyvida">Alma coraz&oacute;n y vida</a></li>
+                        <li><a href="#tucarcel">Tu Carcel</a></li>
+                        <li><a href="#entreamipagosingolpear">Entre a mi pago sin golpear</a></li>
+                        <li><a href="#cuandolloramiguitarra">Cuando llora mi guitarra</a></li>
+                        <li><a href="#adonata">A don Ata</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" id="headingTwo">
+                <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        Varios
+                    </button>
+                </h5>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                <div class="card-body">
+                    <ul>
+                        <li><a href="#lanochesinti">La noche sin ti</a></li>
+                        <li><a href="#lunatucumana">Luna tucumana</a></li>
+                        <li><a href="#lapaloma">La paloma</a></li>
+                        <li><a href="#almacorazonyvida">Alma coraz&oacute;n y vida</a></li>
+                        <li><a href="#tucarcel">Tu Carcel</a></li>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <!-- Añadir más secciones aquí -->
     </div>
 
     <hr>
@@ -149,6 +174,85 @@
         <img src="img/09_pielchaqueña.jpg" alt="Piel chaqueña" class="song-image">
         <p><a href="#top">Inicio</a></p>
     </div>    
+
+    <!-- Canción 10 -->
+    <div id="amorsalvaje" class="my-4">
+        <h2>Amor Salvaje</h2>
+        <img src="img/10_amorsalvaje.jpg" alt="Amor Salvaje" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
+        <!-- Canción 11 -->
+    <div id="laleyylatrampa" class="my-4">
+        <h2>La ley y la trampa</h2>
+        <img src="img/11_laleyylatrampa.jpg" alt="La ley y la trampa" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
+    <!-- Canción 12 -->
+    <div id="lanochesinti" class="my-4">
+        <h2>La noche sin ti</h2>
+        <img src="img/12_lanochesinti.jpg" alt="La noche sin ti" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
+    <!-- Canción 13 -->
+    <div id="laoma" class="my-4">
+        <h2>La oma</h2>
+        <img src="img/13_laoma.jpg" alt="La oma" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
+    <!-- Canción 14 -->
+    <div id="lunatucumana" class="my-4">
+        <h2>Piel Chaque&nacute;a</h2>
+        <img src="img/14_lunatucumana.jpg" alt="Luna tucumana" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
+    <!-- Canción 15 -->
+    <div id="dejamequemevaya" class="my-4">
+        <h2>Dejame que me vaya</h2>
+        <img src="img/15_dejamequemevaya.jpg" alt="Piel chaqueña" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
+    <!-- Canción 16 -->
+    <div id="lapaloma" class="my-4">
+        <h2>La Paloma</h2>
+        <img src="img/16_lapaloma.jpg" alt="La paloma" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
+    <!-- Canción 17 -->
+    <div id="almacorazonyvida" class="my-4">
+        <h2>Alma coraz&oacute;n y vida</h2>
+        <img src="img/17_almacorazonyvida.jpg" alt="Alma Corazón y vida" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
+    <!-- Canción 18 -->
+    <div id="quenadiesepamisufrir" class="my-4">
+        <h2>Que nadie sepa mi sufrir</h2>
+        <img src="img/18_quenadiesepamisufrir.jpg" alt="Que nadie sepa mi sufrir" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
+    <!-- Canción 19 -->
+    <div id="tucarcel" class="my-4">
+        <h2>Tu Carcel</h2>
+        <img src="img/19_tucarcel.jpg" alt="Tu Carcel" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
+    <!-- Canción 20 -->
+    <div id="entreamipagosingolpear" class="my-4">
+        <h2>Entre a mi pago sin golpear</h2>
+        <img src="img/20_entreamipagosingolpear.jpg" alt="Entre a mi pago sin golpear" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
+    <!-- Canción 21 -->
+    <div id="cuandolloramiguitarra" class="my-4">
+        <h2>Entre a mi pago sin golpear</h2>
+        <img src="img/21_cuandolloramiguitarra.jpg" alt="Cuando llora mi guitarra" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
+    <!-- Canción 22 -->
+    <div id="adonata" class="my-4">
+        <h2>Entre a mi pago sin golpear</h2>
+        <img src="img/22_adonata.jpg" alt="A don Ata" class="song-image">
+        <p><a href="#top">Inicio</a></p>
+    </div>  
 </div>
 
 <!-- Bootstrap JS, Popper.js, and jQuery -->
