--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <div class="card-body">
                     <ul>
                         <li><a href="#tamaracastro">Tamara Castro - Zamba de amor en vuelo</a></li>
-                        <li><a href="#gustitoamistol">C. Centuri&oacute;n - Gustito a Mistol</a></li>
-                        <li><a href="#amorenzamba">C. Centuri&oacute;n - Amor en Zamba</a></li>
+                        <li><a href="#gustitoamistol">Gustito a Mistol - C. Centuri&oacute;n</a></li>
+                        <li><a href="#amorenzamba">Amor en Zamba - C. Centuri&oacute;n</a></li>
                         <li><a href="#balderrama">Balderrama</a></li>
                         <li><a href="#talenita">Tale&nacute;ita</a></li>
                         <li><a href="#pielchaquenia">Piel Chaque&nacute;a</a></li>
