--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div id="collapse2" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="card-body">
                     <ul>
-                        <li><a href="#tamaracastro">Tamara Castro - Zamba de amor en vuelo</a></li>
+                        <li><a href="#tamaracastro">Zamba de amor en vuelo - Tamara Castro</a></li>
                         <li><a href="#gustitoamistol">Gustito a Mistol - C. Centuri&oacute;n</a></li>
                         <li><a href="#amorenzamba">Amor en Zamba - C. Centuri&oacute;n</a></li>
                         <li><a href="#balderrama">Balderrama</a></li>
